--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MacroHome Launcher</string>
-    <string name="launch_orientation">hasOrientationRight</string>
+    <string name="launch_orientation">launchOrientation</string>
     <string name="launchtool_appdrawer">com.dustinbayer.macrohomelauncher.appdrawer</string>
     <string name="launchtool_uicolor">com.dustinbayer.macrohomelauncher.uicolor</string>
     <string name="launchtool_launchorientation">com.dustinbayer.macrohomelauncher.launchorientation</string>
