Added starting tutorial

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MacroHome Lite Launcher</string>
+    <string name="first_time">firstTime</string>
     <string name="launch_orientation">launchOrientation</string>
     <string name="launchtool_appdrawer">com.dustinbayer.macrohomelauncher.appdrawer</string>
     <string name="launchtool_launchorientation">com.dustinbayer.macrohomelauncher.launchorientation</string>
